optimization of presentation pages

--- a/Index/presentations/Code of Conduct & Guest Experience.html
+++ b/Index/presentations/Code of Conduct & Guest Experience.html
@@ -127,7 +127,7 @@ formTitle.setAttribute("value", slideTitle);
 document.getElementById("title").innerHTML = slideTitle;
 document.getElementById("title2").innerHTML = slideTitle;
 end.style.display = "none";
-
+document.addEventListener('contextmenu', event => event.preventDefault()); //disable right click
 
 
 function sleep(ms) {
