--- a/Index/presentations/Run Hide Fight.html
+++ b/Index/presentations/Run Hide Fight.html
@@ -27,14 +27,22 @@
 </div>
 
 <div class = "text-center ">
-    <img class = "rounded border border-dark" id="pic" src="..\slides\Emergency Evacuation\Slide1.jpg" width = "1000" height = "750">  <!-- slide picture -->
+        <video
+                id="video-active"
+                class="video-active"
+                width="1000"
+                height="568">
+                <source src="../slides/Run Hide Fight/RUN HIDE FIGHT.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+        </video>
 </div>
 
 
 <div class = "text-center">
     <button class = "btn btn-lg btn-primary" disabled = "true" id = "back">back</button> <!-- back button -->
-    <button class = "btn btn-lg btn-primary" id="next" data-toggle="popover" data-content="please complete the question below" data-placement="right">next</button> <!-- next button -->
-    <button class = "btn btn-lg btn-primary" id="end">end</button> <!-- end button -->
+    <button class = "btn btn-lg btn-primary" disabled = "true" id="next" data-toggle="popover" data-content="please complete the question below" data-placement="right">next</button> <!-- next button -->
+    <button class = "btn btn-lg btn-primary" id = "play" data-toggle = "popover" data-content = "please complete the video to submit your employee ID">Play/Pause</button>
+    <button class = "btn btn-lg btn-primary" data-toggle = "popover" data-content = "click end to submit your ID" id="end">end</button> <!-- end button -->
     <p id = "num"></p> <!-- number countdown -->
 </div>
 
@@ -50,11 +58,11 @@
 
 
 <script>
-slides = 17; //number of total slides
+slides = 3; //number of total slides
 pauseTimer = 5; //number of seconds to pause
 noTimer = []; //these slides will have NO timer
-slidePath = "..\\slides\\Emergency Evacuation\\"; //change slide path
-slideTitle = "Emergency Evacuation"; //change slide title
+slidePath = "..\\slides\\Workplace Violence\\"; //change slide path
+slideTitle = "Run Hide Fight"; //change slide title
 
 
 
@@ -120,6 +128,8 @@ formTitle = document.getElementById("slidetitle");
 formId = document.getElementById("empid");
 buttonDiv = document.getElementById("buttons");
 submit = document.getElementById("submit");
+play = document.getElementById("play");
+video = document.getElementById("video-active");
 currentSlide = 1; // adds and subtracts as buttons are pressed
 maxSlide = 1; // advances only when latest slide is reached
 
@@ -127,7 +137,41 @@ formTitle.setAttribute("value", slideTitle);
 document.getElementById("title").innerHTML = slideTitle;
 document.getElementById("title2").innerHTML = slideTitle;
 end.style.display = "none";
+next.style.display = "none";
+back.style.display = "none";
 
+
+$(document).ready(function(){
+  $("#video-active").on(
+    "timeupdate", 
+    function(event){
+      onTrackedVideoFrame(this.currentTime, this.duration);
+    });
+});
+
+document.addEventListener('contextmenu', event => event.preventDefault()); //disable right click
+
+function onTrackedVideoFrame(currentTime, duration){
+    $("#current").text(currentTime); //Change #current to currentTime
+    $("#duration").text(duration)
+    if (currentTime > duration - 20) {
+        end.style.display = "inline-block";
+        endSoon.disabled = true;
+        $(play).popover('disable');
+        $(play).popover('hide');
+    } else {
+        $(play).popover('enable');
+        $(play).popover('show');
+    }
+}
+
+play.addEventListener("click", function() {
+    if (video.paused) {
+        video.play()
+    } else {
+        video.pause()
+    }
+});
 
 
 function sleep(ms) {
@@ -145,8 +189,8 @@ async function timer () {
         await sleep(1000);
         }
     }
-    next.disabled = false;
-    back.disabled = false;
+    //next.disabled = false;
+    //back.disabled = false;
     num.innerHTML = "";
 }
 
