--- a/Index/presentations/History and Values.html
+++ b/Index/presentations/History and Values.html
@@ -50,7 +50,7 @@
 
 
 <script>
-slides = 35; //number of total slides
+slides = 33; //number of total slides
 pauseTimer = 5; //number of seconds to pause
 noTimer = []; //these slides will have NO timer
 slidePath = "..\\slides\\History and Values\\"; //change slide path
@@ -127,7 +127,7 @@ formTitle.setAttribute("value", slideTitle);
 document.getElementById("title").innerHTML = slideTitle;
 document.getElementById("title2").innerHTML = slideTitle;
 end.style.display = "none";
-
+document.addEventListener('contextmenu', event => event.preventDefault()); //disable right click
 
 
 function sleep(ms) {
